Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -284,7 +284,58 @@ ENDMODULE.
 </br>
 
 ### < `Back` 예제 >
+</br>
 
+**1) `TOP` 모듈 생성**
+```abap
+PROGRAM SAPMZB03005.
+
+" TABLES에는 직접적으로 Table 이름 넣는것보단
+" 필요한 필드 구성하여 만든 Structure 이름 넣는게 좋음.
+" => 지금은 테스트용으로..
+TABLES: SCARR, SDYN_CONN.
+DATA: OK_CODE TYPE sy-ucomm.
+
+" 신호등 결과 값으로 '1', '2', 'A' 를 받을 변수
+DATA: gv_answer TYPE C.
+```
+</br>
+
+**2) `PAI` 모듈 생성**
+```abap
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      CALL FUNCTION 'POPUP_TO_CONFIRM'
+        EXPORTING
+          titlebar =  'Information'
+          text_question               = 'Are you sure?'
+        IMPORTING
+          ANSWER                      = gv_answer
+        EXCEPTIONS
+          TEXT_NOT_FOUND              = 1
+          OTHERS                      = 2.
+
+      IF sy-subrc <> 0.
+        MESSAGE '오류 발생' TYPE 'E'.
+      ELSE.
+        IF gv_answer = 1.
+          LEAVE TO SCREEN 0.
+        ENDIF.
+      ENDIF.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**3) 결과 확인**
+- `BACK` 누르면 팝업이 뜸
+
+<img width="611" height="294" alt="image" src="https://github.com/user-attachments/assets/c1948e66-7c1b-4390-a450-c088b3697217" />
+</br>
+</br>
+</br>
 </br>
 </br>
 
