Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -1,4 +1,4 @@
-## <  핵심 개념 >
+<img width="598" height="304" alt="image" src="https://github.com/user-attachments/assets/d8c6e180-cec3-4d4e-8c72-f616658f6358" />## <  핵심 개념 >
 </br>
 
 - **1) FIELD / CHAIN 입력 체크 방식**
@@ -302,6 +302,11 @@ DATA: gv_answer TYPE C.
 </br>
 
 **2) `PAI` 모듈 생성**
+
+<img width="598" height="304" alt="image" src="https://github.com/user-attachments/assets/4a27c9a0-3465-4118-a1f0-72829a58743b" />
+</br>
+</br>
+
 ```abap
 MODULE user_command_0100 INPUT.
   CASE OK_CODE.
