Update 프로그래밍 전용 웹 스크린 개발(12.15).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.15).md
@@ -39,6 +39,7 @@ ENDMODULE.
 </br>
 
 ### 1) SET CURSOR FIELD 
+- 보통 **`PAI`** 에서 실행. ( 화면 다시 그림 → `PBO` )
 - 특정 화면 필드에 포커스를 이동시킴
 - `<field_name>` : 화면(Screen)에 존재하는 필드 이름
 ```abap
