--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -1,4 +1,4 @@
-<img width="598" height="304" alt="image" src="https://github.com/user-attachments/assets/d8c6e180-cec3-4d4e-8c72-f616658f6358" />## <  핵심 개념 >
+## <  핵심 개념 >
 </br>
 
 - **1) FIELD / CHAIN 입력 체크 방식**
@@ -532,3 +532,68 @@ ENDMODULE.
 <img width="280" height="257" alt="image" src="https://github.com/user-attachments/assets/f31a0317-f737-4867-8f4d-b54428c2f1e5" />
 </br>
 </br>
+</br>
+</br>
+</br>
+
+### 실습 3
+</br>
+
+- 문제
+  
+<img width="382" height="229" alt="image" src="https://github.com/user-attachments/assets/ec99c30b-7f0b-4501-9ac8-3cbe00bae763" />
+</br>
+</br>
+</br>
+
+- 위 문제 코드에서 `PAI` 코드 수정
+```abap
+MODULE check_inputs INPUT.
+  IF SDYN_BOOK-CARRID IS NOT INITIAL AND
+     SDYN_BOOK-CONNID IS NOT INITIAL AND
+     SDYN_BOOK-FLDATE IS NOT INITIAL AND
+     SDYN_BOOK-BOOKID IS NOT INITIAL.
+    SELECT SINGLE CANCELLED FROM SBOOK
+      INTO gv_cancelled
+      WHERE carrid = SDYN_BOOK-CARRID
+        AND connid = SDYN_BOOK-CONNID
+        AND fldate = SDYN_BOOK-FLDATE
+        AND bookid = SDYN_BOOK-BOOKID.
+    SELECT SINGLE carrid connid fldate bookid CUSTOMID CUSTTYPE FROM SBOOK
+      INTO CORRESPONDING FIELDS OF gs_data
+      WHERE carrid = SDYN_BOOK-CARRID
+        AND connid = SDYN_BOOK-CONNID
+        AND fldate = SDYN_BOOK-FLDATE
+        AND bookid = SDYN_BOOK-BOOKID.
+
+    IF gv_cancelled = 'X'.
+      MESSAGE '항공편 예약이 취소된 건 입니다.' TYPE 'E'.
+    ENDIF.
+  ELSE.
+    IF SDYN_BOOK-CARRID IS INITIAL.
+      SET CURSOR FIELD 'SDYN_BOOK-CARRID'.
+    ELSEIF SDYN_BOOK-CONNID IS INITIAL.
+      SET CURSOR FIELD 'SDYN_BOOK-CONNID'.
+    ELSEIF SDYN_BOOK-FLDATE IS INITIAL.
+      SET CURSOR FIELD 'SDYN_BOOK-FLDATE'.
+    ELSEIF SDYN_BOOK-BOOKID IS INITIAL.
+      SET CURSOR FIELD 'SDYN_BOOK-BOKKID'.
+    ENDIF.
+    MESSAGE '1개 이상의 필드가 비워져 있습니다.' TYPE 'E'.
+  ENDIF.
+ENDMODULE.
+
+*----------------------------------------------------------------------*
+
+MODULE EXIT INPUT.
+  CASE OK_CODE.
+    WHEN 'EXIT'.
+      MESSAGE '정말 이동하시겠습니까?' TYPE 'I'.
+      LEAVE PROGRAM.
+    WHEN 'CANCEL'.
+      MESSAGE '정말 이동하시겠습니까?' TYPE 'I'.
+      LEAVE TO SCREEN 0.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
