Update 프로그래밍 전용 웹 스크린 개발(12.17).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.17).md
@@ -546,7 +546,7 @@ ENDMODULE.
 </br>
 </br>
 
-- 위 문제 코드에서 `PAI` 코드 수정
+- **위 문제 코드에서 `PAI` 코드 수정**
 ```abap
 MODULE check_inputs INPUT.
   IF SDYN_BOOK-CARRID IS NOT INITIAL AND
@@ -597,3 +597,17 @@ MODULE EXIT INPUT.
   ENDCASE.
 ENDMODULE.
 ```
+</br>
+
+- **결과 확인**
+
+- 빈칸에 커서가 옮겨짐
+<img width="319" height="268" alt="image" src="https://github.com/user-attachments/assets/dc38a9cd-5fac-4423-89b8-519d2a896335" />
+</br>
+</br>
+</br>
+</br>
+
+- 나가면 창이 띄워짐
+  
+<img width="439" height="134" alt="image" src="https://github.com/user-attachments/assets/be90aad3-8164-45d5-9dc7-a11a2e4153fe" />
