Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -1,4 +1,4 @@
 ## 서브스크린 (Subscreen)
 - 메인 화면에 `Subscreen Area` (예약 영역) 를 미리 정의
-- 실행 시 다른 Screen(Subscreen)을 해당 영역에 채워 넣음
+- 실행 시 다른 Screen( `Subscreen` )을 해당 영역에 채워 넣음
 - 메인 화면은 유지되며 부분 화면을 재사용·동적으로 교체 가능
