Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -1,4 +1,16 @@
-## 서브스크린 (Subscreen)
+## < 서브스크린 (Subscreen) >
 - 메인 화면에 `Subscreen Area` (예약 영역) 를 미리 정의
 - 실행 시 다른 Screen( `Subscreen` )을 해당 영역에 채워 넣음
 - 메인 화면은 유지되며 부분 화면을 재사용·동적으로 교체 가능
+</br>
+
+### < Subscreen 제약사항 정리 >
+- LOOP 문 내부 사용 불가
+  
+  - `LOOP AT SCREEN` , `LOOP AT itab` 등 반복문 안에서 `CALL SUBSCREEN` 사용 ❌
+- CHAIN … ENDCHAIN 내부 사용 불가
+- OK Code 필드 가질 수 없음
+- 스크린 번호(Screen No.)는 유니크해야 함
+- 화면 제어 명령 사용 불가
+  
+  - 타이틀, 메뉴, 버튼은 메인 스크린에서만 설정
