Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -12,3 +12,29 @@
 - 스크린 번호(Screen No.)는 유니크해야 함
 - 화면 제어 명령 사용 불가
   - 타이틀, 메뉴, 버튼은 메인 스크린에서만 설정
+</br>
+
+### < `CALL SUBSCREEN` >
+- `CALL SUBSCREEN` 은 화면 전환이 아님
+- 메인 스크린 안의 `Subscreen Area` 에 다른 Screen을 포함시키는 동작
+- 메인 스크린의 흐름(PBO/PAI) 안에서 서브스크린의 PBO/PAI도 함께 실행됨
+</br>
+
+- PBO에서 사용 (서브스크린 지정)
+- `INCLUDING` 은 PBO에서만 사용
+```abap
+CALL SUBSCREEN <subscreen_area>
+  INCLUDING <program> <dynpro>.
+```
+- PAI에서 사용 (입력 처리)
+```abap
+CALL SUBSCREEN <subscreen_area>.
+```
+```abap
+PROCESS BEFORE OUTPUT.
+  CALL SUBSCREEN sub1
+    INCLUDING SY-CPROG '0101'.
+
+PROCESS AFTER INPUT.
+  CALL SUBSCREEN sub1.
+```
