Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -18,6 +18,7 @@
 - `CALL SUBSCREEN` 은 화면 전환이 아님
 - 메인 스크린 안의 `Subscreen Area` 에 다른 Screen을 포함시키는 동작
 - 메인 스크린의 흐름(PBO/PAI) 안에서 서브스크린의 PBO/PAI도 함께 실행됨
+- 시스템변수 `SY-CPROG` = 현재 호출된(실행 중인) ABAP 프로그램명
 </br>
 
 - PBO에서 사용 (서브스크린 지정)
