Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -44,3 +44,6 @@ PROCESS AFTER INPUT.
 </br>
 
 ### < `CALL SUBSCREEN` 예제 >
+**1) 메인 스크린 Layout에 `Subscreen Area` 정의**
+
+<img width="439" height="389" alt="image" src="https://github.com/user-attachments/assets/f81e042f-6ce9-4ef0-b49d-edcc7356a115" />
