Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -47,3 +47,7 @@ PROCESS AFTER INPUT.
 **1) 메인 스크린 Layout에 `Subscreen Area` 정의**
 
 <img width="439" height="389" alt="image" src="https://github.com/user-attachments/assets/f81e042f-6ce9-4ef0-b49d-edcc7356a115" />
+</br>
+</br>
+
+<img width="510" height="419" alt="image" src="https://github.com/user-attachments/assets/d2526b08-5c1f-4c39-96b7-0364d5af3fe4" />
