Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -54,3 +54,25 @@ PROCESS AFTER INPUT.
 </br>
 
 <img width="407" height="334" alt="image" src="https://github.com/user-attachments/assets/9f55763e-9639-4ce3-82f5-2a5951dfa53e" />
+</br>
+</br>
+</br>
+</br>
+
+**2) Screen 100 에서 모듈 생성**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE set_subscreen.
+ MODULE CLEAR_OK_CODE.
+
+  " SUB 라는 이름의 서브스크린 공간에 서브스크린을 세팅함
+  " sy-cprog : 현재 프로그램 이름
+  " gv_dynnr : TOP에 추가한 변수이며 '0110' 과 같은 서브스크린 번호가 들어감
+  CALL SUBSCREEN SUB
+  INCLUDING SY-CPROG gv_dynnr.
+
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0100.
+   CALL SUBSCREEN SUB.
+```
