Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -75,3 +75,15 @@ PROCESS AFTER INPUT.
  MODULE USER_COMMAND_0100.
    CALL SUBSCREEN SUB.
 ```
+</br>
+
+**3) `TOP` 모듈 생성**
+```abap
+PROGRAM SAPMZB03006.
+
+DATA: OK_CODE TYPE sy-ucomm.
+DATA: RAD1 TYPE C,
+      RAD2 TYPE C,
+      RAD3 TYPE C VALUE 'X'.
+DATA: gv_dynnr TYPE sy-dynnr.
+```
