Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -87,3 +87,46 @@ DATA: RAD1 TYPE C,
       RAD3 TYPE C VALUE 'X'.
 DATA: gv_dynnr TYPE sy-dynnr.
 ```
+</br>
+
+**4) `PAI` 모듈 생성**
+```abap
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT' OR 'CANCEL'.
+      LEAVE PROGRAM.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**5) `PBO` 모듈 생성**
+```abap
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100' WITH sy-uname.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE set_subscreen OUTPUT.
+  CASE 'X'.
+    WHEN RAD1.
+      gv_dynnr = '0110'.
+    WHEN RAD2.
+      gv_dynnr = '0120'.
+    WHEN RAD3.
+      gv_dynnr = '0130'.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE clear_ok_code OUTPUT.
+  CLEAR OK_CODE.
+ENDMODULE.
+```
