--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -17,6 +17,7 @@
 - **`AT EXIT-COMMAND`** 은 무조건 **PAI** 에서만 구현
 - **`AT EXIT-COMMAND`** 는 Screen 코드에서 **맨 위** 에 두는 게 좋음
 - **서로 다른 스크린의 버튼** 은 같은 MODULE에서 처리하면 **안됨**
+- **즉시 반응** = **`Function Code`** 필수
 
 </br>
 
