Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -168,3 +168,17 @@ ENDMODULE.
 </br>
 
 ### 실습 1
+</br>
+
+- 문제
+  
+<img width="391" height="234" alt="image" src="https://github.com/user-attachments/assets/972bf0b6-b73c-4140-a8a4-20be7ba81441" />
+</br>
+</br>
+
+**1) 200 Screen Layout 생성**
+- 체크 박스 즉시 반응 시키려면 `Function code` 무조건 설정해야 함
+
+<img width="458" height="309" alt="image" src="https://github.com/user-attachments/assets/4022d7d7-b302-46cf-84e8-c7aba5e35552" />
+
+**2) Screen 코드 수정 및 생성**
