Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -180,5 +180,20 @@ ENDMODULE.
 - 체크 박스 즉시 반응 시키려면 `Function code` 무조건 설정해야 함
 
 <img width="458" height="309" alt="image" src="https://github.com/user-attachments/assets/4022d7d7-b302-46cf-84e8-c7aba5e35552" />
+</br>
+</br>
 
 **2) Screen 코드 수정 및 생성**
+- 200 Screen 코드 생성
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0200.
+ MODULE set_subscreen2.
+ MODULE CLEAR_OK_CODE.
+   CALL SUBSCREEN SUB2
+   INCLUDING sy-cprog gv_dynnr.
+*
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0200.
+   CALL SUBSCREEN SUB2.
+```
