Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -185,6 +185,23 @@ ENDMODULE.
 </br>
 
 **2) Screen 코드 수정 및 생성**
+- 100 Screen 코드 생성
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE set_subscreen.
+ MODULE CLEAR_OK_CODE.
+
+  " SUB 라는 이름의 서브스크린 공간에 서브스크린을 세팅함
+  " sy-cprog : 현재 프로그램 이름
+  " gv_dynnr : TOP에 추가한 변수이며 '0110' 과 같은 서브스크린 번호가 들어감
+  CALL SUBSCREEN SUB
+  INCLUDING SY-CPROG gv_dynnr.
+
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0100.
+   CALL SUBSCREEN SUB.
+```
 - 200 Screen 코드 생성
 ```abap
 PROCESS BEFORE OUTPUT.
@@ -201,3 +218,15 @@ PROCESS AFTER INPUT.
 </br>
 </br>
 
+**3) `TOP` 모듈 수정**
+```abap
+PROGRAM SAPMZB03006.
+
+DATA: OK_CODE TYPE sy-ucomm.
+DATA: RAD1 TYPE C,
+      RAD2 TYPE C,
+      RAD3 TYPE C VALUE 'X',
+      CHK1 TYPE C,
+      CHK2 TYPE C VALUE 'X'.
+DATA: gv_dynnr TYPE sy-dynnr.
+```
