Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -10,7 +10,7 @@
 - **`LEAVE TO SCREEN 0`** 같은 화면 전환 명령은 **`PAI`** 에서만
 - **`SCREEN-INPUT`** 같은 화면 속성 변경은 **`PBO`** 에서만
 - 사용자 입력 기반 SELECT는 **`PAI`** , 조회 결과 화면 반영/속성 변경은 **`PBO`**
-- **OK_CODE 초기화** 코드 꼭 넣어줘야 함 ( 보통 **`PBO`** 에서)
+- **OK_CODE 초기화** 코드 꼭 넣어줘야 함 ( 보통 **`PBO`** 에서 )
 - **`OK_CODE`** 케이스문은 **`PAI`** 에서
 - LOOP AT SCREEN 사용시 **`MODIFY SCREEN`** 넣기
 - **`FIELD / CHAIN`** 은 무조건 **PAI** 에서만 구현
@@ -18,6 +18,8 @@
 - **`AT EXIT-COMMAND`** 는 Screen 코드에서 **맨 위** 에 두는 게 좋음
 - **서로 다른 스크린의 버튼** 은 같은 MODULE에서 처리하면 **안됨**
 - **즉시 반응** = **`Function Code`** 필수
+- **버튼** → **`Function Code`** 만 OK_CODE로 옴
+- **라디오·체크** → 보통 **`Name`** 값(X)으로 판단 ( `Function Code` 지정 필수 )
 
 </br>
 
@@ -232,4 +234,75 @@ DATA: RAD1 TYPE C,
       CHK1 TYPE C,
       CHK2 TYPE C VALUE 'X'.
 DATA: gv_dynnr TYPE sy-dynnr.
+```
+</br>
+</br>
+
+**4) `PAI` 모듈 수정**
+```abap
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT' OR 'CANCEL'.
+      LEAVE PROGRAM.
+    WHEN '200BUTTON'.
+      LEAVE TO SCREEN 200.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE user_command_0200 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT' OR 'CANCEL'.
+      LEAVE PROGRAM.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+</br>
+
+**5) `PBO` 모듈 수정**
+```abap
+MODULE status_0100 OUTPUT.
+ SET PF-STATUS 'S100'.
+ SET TITLEBAR 'T100' WITH sy-uname.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE set_subscreen OUTPUT.
+  CASE 'X'.
+    WHEN RAD1.
+      gv_dynnr = '0110'.
+    WHEN RAD2.
+      gv_dynnr = '0120'.
+    WHEN RAD3.
+      gv_dynnr = '0130'.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE set_subscreen2 OUTPUT.
+  CASE 'X'.
+    WHEN CHK1.
+      gv_dynnr = '0140'.
+    WHEN CHK2.
+      gv_dynnr = '0150'.
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE clear_ok_code OUTPUT.
+  CLEAR OK_CODE.
+ENDMODULE.
 ```
