Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -85,6 +85,12 @@ PROCESS AFTER INPUT.
 <img width="407" height="334" alt="image" src="https://github.com/user-attachments/assets/9f55763e-9639-4ce3-82f5-2a5951dfa53e" />
 </br>
 </br>
+
+- 스크린 생성 시 `Dynpro Type` 을 `Subscreen` 으로 설정
+<img width="480" height="314" alt="image" src="https://github.com/user-attachments/assets/642f35c6-806b-4b9a-b02e-38530152fa33" />
+
+</br>
+</br>
 </br>
 
 **2) Screen 100 에서 모듈 생성**
