Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -297,13 +297,17 @@ ENDMODULE.
 *&---------------------------------------------------------------------*
 
 MODULE set_subscreen2 OUTPUT.
-  CASE 'X'.
-    WHEN CHK1.
-      gv_dynnr = '0140'.
-    WHEN CHK2.
-      gv_dynnr = '0150'.
-    WHEN OTHERS.
-  ENDCASE.
+  IF CHK1 = 'X' AND CHK2 = 'X'.
+    MESSAGE '입력값이 2개 입니다.' TYPE 'I'.
+  ELSE.
+    CASE 'X'.
+      WHEN CHK1.
+        gv_dynnr = '0140'.
+      WHEN CHK2.
+        gv_dynnr = '0150'.
+      WHEN OTHERS.
+    ENDCASE.
+  ENDIF.
 ENDMODULE.
 
 *&---------------------------------------------------------------------*
