Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -316,3 +316,13 @@ MODULE clear_ok_code OUTPUT.
   CLEAR OK_CODE.
 ENDMODULE.
 ```
+</br>
+</br>
+
+**6) 결과 확인**
+
+<img width="469" height="270" alt="image" src="https://github.com/user-attachments/assets/4175ec54-93b6-46f5-b8be-3f8e85984167" />
+</br>
+</br>
+</br>
+</br>
