Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -320,7 +320,8 @@ ENDMODULE.
 </br>
 
 **6) 결과 확인**
-
+- 체크에 따라 서브스크린이 달라짐
+  
 <img width="469" height="270" alt="image" src="https://github.com/user-attachments/assets/4175ec54-93b6-46f5-b8be-3f8e85984167" />
 </br>
 </br>
