Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -298,7 +298,7 @@ ENDMODULE.
 
 MODULE set_subscreen2 OUTPUT.
   IF CHK1 = 'X' AND CHK2 = 'X'.
-    MESSAGE '입력값이 2개 입니다.' TYPE 'I'.
+    MESSAGE '입력값이 2개 입니다.' TYPE 'E' DISPLAY LIKE 'I'.
   ELSE.
     CASE 'X'.
       WHEN CHK1.
