Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -185,7 +185,17 @@ ENDMODULE.
 
 </br>
 
-## < Tabstrip(Tab Page) 스크롤링 방식 >
+## < Tabstrip (Tab Page) >
+- `Tabstrip` = 여러 화면을 탭으로 전환하는 컨트롤
+- 탭 제목 = Pushbutton
+- 탭 내용 = Subscreen Area + Subscreen Screen
+- 실제 데이터/화면 로직은 Subscreen에서 처리
+```abap
+CONTROLS my_tab_strip TYPE TABSTRIP.
+```
+</br>
+
+### < Tabstrip(Tab Page) 스크롤링 방식 >
 **1) 로컬 스크롤링**
 - Tab Page가 여러 개일 때 각 Tab Page마다 Subscreen Area를 따로 가짐
 - 탭별로 화면·데이터를 독립적으로 관리
