Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -190,8 +190,13 @@ ENDMODULE.
 - 탭 제목 = Pushbutton
 - 탭 내용 = Subscreen Area + Subscreen Screen
 - 실제 데이터/화면 로직은 Subscreen에서 처리
+
+- Screen 코드에서 추가
 ```abap
-CONTROLS my_tab_strip TYPE TABSTRIP.
+CONTROLS : <탭스트립명> TYPE TABSTRIP.
+```
+```abap
+CONTROLS: TAB_STRIP TYPE TABSTRIP.
 ```
 </br>
 
