Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -190,14 +190,6 @@ ENDMODULE.
 - 탭 제목 = Pushbutton
 - 탭 내용 = Subscreen Area + Subscreen Screen
 - 실제 데이터/화면 로직은 Subscreen에서 처리
-
-- Screen 코드에서 추가
-```abap
-CONTROLS : <탭스트립명> TYPE TABSTRIP.
-```
-```abap
-CONTROLS: TAB_STRIP TYPE TABSTRIP.
-```
 </br>
 
 ### < Tabstrip(Tab Page) 스크롤링 방식 >
@@ -210,6 +202,27 @@ CONTROLS: TAB_STRIP TYPE TABSTRIP.
 - Tab Page가 여러 개여도 Subscreen Area는 1개만 사용
 - 탭 선택 시 PAI에서 표시할 서브스크린을 교체(재사용)
 - 구조는 복잡하지만 유지보수·재사용성 좋음
+</br>
+
+- `TOP` 모듈 (컨트롤 선언)
+```abap
+CONTROLS : <탭스트립명> TYPE TABSTRIP.
+```
+```abap
+CONTROLS: TAB_STRIP TYPE TABSTRIP.
+```
+</br>
+
+- `Screen` 코드 (서브스크린 호출)
+```abap
+CALL SUBSCREEN <Area명> INCLUDING <프로그램> <스크린번호>.
+```
+```abap
+CALL SUBSCREEN REFSUB1 INCLUDING sy-cprog '110'.
+CALL SUBSCREEN REFSUB2 INCLUDING sy-cprog '120'.
+CALL SUBSCREEN REFSUB3 INCLUDING sy-cprog '130'.
+```
+</br>
 </br>
 </br>
 
