Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -226,6 +226,21 @@ CALL SUBSCREEN REFSUB2 INCLUDING sy-cprog '120'.
 CALL SUBSCREEN REFSUB3 INCLUDING sy-cprog '130'.
 ```
 </br>
+
+**< 로컬 스크롤링 예제 >**
+
+**1) Layout에서 tabstrip 생성**
+
+<img width="526" height="352" alt="image" src="https://github.com/user-attachments/assets/7fbe02c8-0a59-4855-822b-31e6b4fb23a1" />
+</br>
+</br>
+
+- `Tap Title` 로 TAP 개수 정할 수 있음
+<img width="527" height="325" alt="image" src="https://github.com/user-attachments/assets/e29e8f16-1056-4783-a1d0-64f7c68e703f" />
+
+
+**1) Layout에서 tabstrip 생성**
+</br>
 </br>
 </br>
 
