Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -212,10 +212,6 @@ CONTROLS : <탭스트립명> TYPE TABSTRIP.
 ```abap
 CONTROLS: TAB_STRIP TYPE TABSTRIP.
 ```
-</br>
-</br>
-
-### 1) 로컬 스크롤링
 - `Screen` 코드 (서브스크린 호출)
 ```abap
 CALL SUBSCREEN <Area명> INCLUDING <프로그램> <스크린번호>.
@@ -226,8 +222,9 @@ CALL SUBSCREEN REFSUB2 INCLUDING sy-cprog '120'.
 CALL SUBSCREEN REFSUB3 INCLUDING sy-cprog '130'.
 ```
 </br>
+</br>
 
-**< 로컬 스크롤링 예제 >**
+### 1) 로컬 스크롤링
 
 **1) Layout에서 tabstrip 생성**
 
@@ -236,13 +233,86 @@ CALL SUBSCREEN REFSUB3 INCLUDING sy-cprog '130'.
 </br>
 
 - `Tap Title` 로 TAP 개수 정할 수 있음
+  
 <img width="527" height="325" alt="image" src="https://github.com/user-attachments/assets/e29e8f16-1056-4783-a1d0-64f7c68e703f" />
+</br>
+</br>
+</br>
+
+**2) Layout에서 `FctCode` 와 `FctType` 설정**
+- `FctType` 은 **`P`** 로 설정
+  
+<img width="553" height="325" alt="image" src="https://github.com/user-attachments/assets/1fa73db5-aa96-4b1d-911d-72dbeb5ebb59" />
+</br>
+</br>
+</br>
+
+**3) Layout에서 Tab 안에 Subscreen 넣기**
+-  Subscreen area를 추가
+-  추가하면 REF 자동으로 할당됨
 
 
-**1) Layout에서 tabstrip 생성**
+<img width="553" height="306" alt="image" src="https://github.com/user-attachments/assets/f7dec350-de01-4a2c-84e2-85cbe1543b08" />
+
 </br>
 </br>
 </br>
+
+**4) `TOP` 모듈 생성**
+```abap
+PROGRAM SAPMZB03006.
+
+DATA: OK_CODE TYPE sy-ucomm.
+DATA: RAD1 TYPE C,
+      RAD2 TYPE C,
+      RAD3 TYPE C VALUE 'X',
+      CHK1 TYPE C,
+      CHK2 TYPE C VALUE 'X'.
+DATA: gv_dynnr TYPE sy-dynnr,
+      gv_tabdynnr TYPE sy-dynnr.
+
+CONTROLS: TAB_STRIP TYPE TABSTRIP.
+```
+</br>
+
+**5) `Screen` 에서 모듈 생성**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE set_subscreen.
+ MODULE CLEAR_OK_CODE.
+   MODULE set_tabstrip.
+
+  " SUB 라는 이름의 서브스크린 공간에 서브스크린을 세팅함
+  " sy-cprog : 현재 프로그램 이름
+  " gv_dynnr : TOP에 추가한 변수이며 '0110' 과 같은 서브스크린 번호가 들어감
+  CALL SUBSCREEN SUB
+  INCLUDING SY-CPROG gv_dynnr.
+
+" TAB_STRIP 로컬 스크롤링 버전
+  CALL SUBSCREEN REFSUB1 INCLUDING sy-cprog '110'.
+  CALL SUBSCREEN REFSUB2 INCLUDING sy-cprog '120'.
+  CALL SUBSCREEN REFSUB3 INCLUDING sy-cprog '130'.
+
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0100.
+   CALL SUBSCREEN SUB.
+
+" TAB_STRIP 로컬 스크롤링 버전
+   CALL SUBSCREEN REFSUB1.
+   CALL SUBSCREEN REFSUB2.
+   CALL SUBSCREEN REFSUB3.
+```
+</br>
+</br>
+
+### 2) PAI 스크롤링
+
+
+</br>
+</br>
+</br>
+
 
 ---
 
