Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -225,6 +225,7 @@ CALL SUBSCREEN REFSUB3 INCLUDING sy-cprog '130'.
 </br>
 
 ### 1) 로컬 스크롤링
+</br>
 
 **1) Layout에서 tabstrip 생성**
 
@@ -268,8 +269,6 @@ DATA: RAD1 TYPE C,
       RAD3 TYPE C VALUE 'X',
       CHK1 TYPE C,
       CHK2 TYPE C VALUE 'X'.
-DATA: gv_dynnr TYPE sy-dynnr,
-      gv_tabdynnr TYPE sy-dynnr.
 
 CONTROLS: TAB_STRIP TYPE TABSTRIP.
 ```
@@ -281,13 +280,6 @@ PROCESS BEFORE OUTPUT.
  MODULE STATUS_0100.
  MODULE set_subscreen.
  MODULE CLEAR_OK_CODE.
-   MODULE set_tabstrip.
-
-  " SUB 라는 이름의 서브스크린 공간에 서브스크린을 세팅함
-  " sy-cprog : 현재 프로그램 이름
-  " gv_dynnr : TOP에 추가한 변수이며 '0110' 과 같은 서브스크린 번호가 들어감
-  CALL SUBSCREEN SUB
-  INCLUDING SY-CPROG gv_dynnr.
 
 " TAB_STRIP 로컬 스크롤링 버전
   CALL SUBSCREEN REFSUB1 INCLUDING sy-cprog '110'.
@@ -296,7 +288,6 @@ PROCESS BEFORE OUTPUT.
 
 PROCESS AFTER INPUT.
  MODULE USER_COMMAND_0100.
-   CALL SUBSCREEN SUB.
 
 " TAB_STRIP 로컬 스크롤링 버전
    CALL SUBSCREEN REFSUB1.
@@ -307,12 +298,99 @@ PROCESS AFTER INPUT.
 </br>
 
 ### 2) PAI 스크롤링
+- `TAB_STRIP-activetab` : 현재 선택된 Tab Page를 저장하는 필드
+</br>
+
+**1) Layout에서 `FctCode` 을 None으로 지정**
+
+<img width="543" height="318" alt="image" src="https://github.com/user-attachments/assets/d875863d-8584-4761-be6e-8483bbf82461" />
+</br>
+</br>
+</br>
+
+**2) 첫 번째 Tab에만 Subscreen 넣기 / 나머지 Tab `Ref` 설정하기**
+<img width="547" height="305" alt="image" src="https://github.com/user-attachments/assets/a93ceb3f-b07d-4ef1-a087-9ecfda083457" />
+</br>
+</br>
+</br>
+
+**3) `TOP` 모듈 생성**
+```abap
+PROGRAM SAPMZB03006.
+
+DATA: OK_CODE TYPE sy-ucomm.
+DATA: RAD1 TYPE C,
+      RAD2 TYPE C,
+      RAD3 TYPE C VALUE 'X',
+      CHK1 TYPE C,
+      CHK2 TYPE C VALUE 'X'.
+DATA: gv_dynnr TYPE sy-dynnr,
+      gv_tabdynnr TYPE sy-dynnr.
+
+CONTROLS: TAB_STRIP TYPE TABSTRIP.
+```
+
+</br>
+
+**4) `Screen` 에서 모듈 생성**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE set_subscreen.
+ MODULE CLEAR_OK_CODE.
+   MODULE set_tabstrip.
+
+   " TAP_STRIP PAI 스크롤링 버전
+   CALL SUBSCREEN REFSUB1 INCLUDING sy-cprog gv_tabdynnr.
+
+PROCESS AFTER INPUT.
+ MODULE USER_COMMAND_0100.
+
+  " TAP_STRIP PAI 스크롤링 버전
+   CALL SUBSCREEN REFSUB1.
+```
+</br>
+
+**5) `PAI` 모듈 수정**
+```abap
+MODULE user_command_0100 INPUT.
+  CASE OK_CODE.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+    WHEN 'EXIT' OR 'CANCEL'.
+      LEAVE PROGRAM.
+    WHEN '200BUTTON'.
+      LEAVE TO SCREEN 200.
+    " activetab 속성에 들어가는 값은 Function Code여야 함
+    WHEN 'TABFC1' OR 'TABFC2' OR 'TABFC3'.
+      tab_strip-activetab = OK_CODE. " 펑션코드 그대로 넣어주면 됨
+    WHEN OTHERS.
+  ENDCASE.
+ENDMODULE.
+```
+</br>
+
+**6) `PBO` 모듈 수정**
+```abap
+MODULE set_tabstrip OUTPUT.
+  CASE TAB_STRIP-activetab.
+    WHEN 'TABFC1'.
+      gv_tabdynnr = '0110'.
+    WHEN 'TABFC2'.
+      gv_tabdynnr = '0120'.
+    WHEN 'TABFC3'.
+      gv_tabdynnr = '0130'.
+    WHEN OTHERS.
+      gv_tabdynnr = '0110'.
+      tab_strip-activetab = 'TABFC1'.
+  ENDCASE.
+ENDMODULE.
+```
 
 
 </br>
 </br>
 </br>
-
 
 ---
 
