Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -302,6 +302,7 @@ PROCESS AFTER INPUT.
 
 ### 2) PAI 스크롤링
 - `TAB_STRIP-activetab` : 현재 선택된 Tab Page를 저장하는 필드
+- `activetab` = 현재 활성화된 탭의 Function Code
 </br>
 
 **1) Layout에서 `FctCode` 을 None으로 지정**
