Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -173,7 +173,7 @@ ENDMODULE.
 
 </br>
 
-## < 펑션그룹을 활용한 서브스크린 데이터 공유 >
+### < 펑션그룹을 활용한 서브스크린 데이터 공유 >
 - 서브스크린은 `Function Group` 안에 정의 가능
 - 같은 Function Group의 글로벌 데이터(전역변수)를 서브스크린에서 직접 사용 가능
 - PBO/PAI에서 `Function Module` 호출로 데이터 EXPORT / IMPORT 가능
