Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -173,10 +173,32 @@ ENDMODULE.
 
 </br>
 
+## < 추가적인 개념 >
+</br>
+
 ### < 펑션그룹을 활용한 서브스크린 데이터 공유 >
 - 서브스크린은 `Function Group` 안에 정의 가능
 - 같은 Function Group의 글로벌 데이터(전역변수)를 서브스크린에서 직접 사용 가능
 - PBO/PAI에서 `Function Module` 호출로 데이터 EXPORT / IMPORT 가능
+</br>
+</br>
+
+### < Maintenance View 에서 TCODE 생성 >
+**1) SCARR 테이블 복사해서 새 테이블 만들기**
+
+<img width="556" height="407" alt="image" src="https://github.com/user-attachments/assets/86bb2c4e-3e33-4687-b353-7611d2326416" />
+</br>
+</br>
+
+**2) Maintenance View 설정**
+
+<img width="430" height="382" alt="image" src="https://github.com/user-attachments/assets/17be6231-9dc9-4ecd-923c-134dd9d1320e" />
+
+</br>
+</br>
+
+<img width="556" height="246" alt="image" src="https://github.com/user-attachments/assets/042332ac-3efb-4e8a-9c56-822f726ad6f4" />
+
 </br>
 </br>
 </br>
