Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -22,6 +22,7 @@
 - **라디오·체크** → 보통 **`Name`** 값(X)으로 판단 ( `Function Code` 지정 필수 )
 
 </br>
+</br>
 
 ---
 
@@ -168,6 +169,7 @@ ENDMODULE.
 ```
 </br>
 </br>
+</br>
 
 ---
 
@@ -209,7 +211,6 @@ CALL SUBSCREEN REFSUB1 INCLUDING sy-cprog '110'.
 CALL SUBSCREEN REFSUB2 INCLUDING sy-cprog '120'.
 CALL SUBSCREEN REFSUB3 INCLUDING sy-cprog '130'.
 ```
-</br>
 </br>
 </br>
 </br>
@@ -285,6 +286,7 @@ PROCESS AFTER INPUT.
    CALL SUBSCREEN REFSUB2.
    CALL SUBSCREEN REFSUB3.
 ```
+</br>
 </br>
 </br>
 </br>
@@ -416,6 +418,21 @@ ENDMODULE.
 </br>
 
 <img width="556" height="246" alt="image" src="https://github.com/user-attachments/assets/042332ac-3efb-4e8a-9c56-822f726ad6f4" />
+</br>
+</br>
+
+**3) Maintenance View `TCODE` 생성**
+
+- `Transaction with parameters` 선택
+
+<img width="465" height="291" alt="image" src="https://github.com/user-attachments/assets/53e1c5af-a876-4adc-94de-8d272dc65fe8" />
+</br>
+</br>
+
+- `UPDATE = 'X'` → 변경/저장 가능
+- `UPDATE 비어 있음` → 조회(Display) 모드
+  
+<img width="401" height="463" alt="image" src="https://github.com/user-attachments/assets/29ecfcce-9a90-4b5f-9771-679496e1e7ca" />
 
 </br>
 </br>
