Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -597,3 +597,13 @@ ENDMODULE.
 </br>
 </br>
 </br>
+</br>
+
+### 실습 2
+- 기존 프로그램 코드에서 서브스크린 추가
+</br>
+
+**1) 각 스크린의 `Layout` 지정**
+- Screen 100
+  
+<img width="621" height="367" alt="image" src="https://github.com/user-attachments/assets/f16219aa-d986-4b18-95bd-53da8499413d" />
