Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -630,3 +630,18 @@ ENDMODULE.
 </br>
 </br>
 </br>
+
+**2) `Screen 100` 에서의 모듈 생성**
+```abap
+PROCESS BEFORE OUTPUT.
+ MODULE STATUS_0100.
+ MODULE set_subscreen.
+   CALL SUBSCREEN SUB
+   INCLUDING sy-cprog gv_tabdynnr.
+ MODULE CLEAR_OK_CODE.
+
+PROCESS AFTER INPUT.
+  MODULE CHECK_SFLIGHT.
+  MODULE USER_COMMAND_0100.
+    CALL SUBSCREEN SUB.
+```
