Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -645,3 +645,189 @@ PROCESS AFTER INPUT.
   MODULE USER_COMMAND_0100.
     CALL SUBSCREEN SUB.
 ```
+</br>
+</br>
+
+**3) `TOP` 모듈 수정**
+```abap
+PROGRAM SAPMZBC410_SOLUTION_03_01.
+
+TABLES: SDYN_CONN, SPFLI, SCARR, SBOOK.
+
+DATA: exit_button TYPE C,
+      OK_CODE TYPE SY-UCOMM,
+      gs_data TYPE SDYN_CONN,
+      gv_subrc TYPE sy-subrc,
+      gv_button TYPE I.
+
+DATA: VIEW TYPE C VALUE 'X',
+      MAINTAIN_FLIGHTS TYPE C,
+      MAINTAIN_BOOKINGS TYPE C,
+      gv_title TYPE I VALUE 1,
+      gv_tabdynnr TYPE sy-dynnr.
+
+CONTROLS: MY_TABSTRIP TYPE TABSTRIP.
+
+DATA: gs_spfli TYPE spfli,
+      gs_scarr TYPE scarr,
+      gs_sbook TYPE sbook.
+```
+</br>
+</br>
+
+**4) 100 Screen `PAI` 모듈 수정**
+```abap
+MODULE user_command_0100 INPUT.
+
+  IF exit_button = 'X'.
+    LEAVE TO SCREEN 0.
+  ELSEIF exit_button = 'T'.
+    CALL SCREEN 150
+    STARTING AT 5 5
+    ENDING AT 50 10.
+    CLEAR: exit_button.
+  ENDIF.
+
+ENDMODULE.
+
+*----------------------------------------------------------------------*
+
+MODULE check_sflight INPUT.
+
+  CASE OK_CODE.
+    WHEN 'FC1' OR 'FC2' OR 'FC3'.
+      MY_TABSTRIP-activetab = OK_CODE.
+    WHEN 'MODE'.
+      CASE 'X'.
+        WHEN VIEW.
+          gv_title = 1.
+        WHEN MAINTAIN_FLIGHTS.
+          gv_title = 2.
+        WHEN MAINTAIN_BOOKINGS.
+          gv_title = 3.
+        WHEN OTHERS.
+      ENDCASE.
+    WHEN 'PUSH'.
+      gv_button = 1.
+
+      SELECT SINGLE * FROM sflight
+        INTO CORRESPONDING FIELDS OF gs_data
+        WHERE carrid = SDYN_CONN-carrid
+          AND connid = SDYN_CONN-connid
+          AND fldate = SDYN_CONN-fldate.
+
+      SELECT SINGLE * FROM spfli
+        INTO CORRESPONDING FIELDS OF gs_spfli
+        WHERE carrid = SDYN_CONN-carrid
+          AND connid = SDYN_CONN-connid.
+
+      SELECT SINGLE * FROM scarr
+        INTO CORRESPONDING FIELDS OF gs_scarr
+        WHERE carrid = SDYN_CONN-carrid.
+
+      SELECT SINGLE * FROM sbook
+        INTO CORRESPONDING FIELDS OF gs_sbook
+        WHERE carrid = SDYN_CONN-carrid
+          AND connid = SDYN_CONN-connid
+          AND fldate = SDYN_CONN-fldate.
+
+      IF sy-subrc <> 0.
+        gv_subrc = 4.
+        message text-007 TYPE 'I'.
+      ENDIF.
+    WHEN OTHERS.
+  ENDCASE.
+
+ENDMODULE.
+
+*----------------------------------------------------------------------*
+
+MODULE user_command_0150 INPUT.
+  IF OK_CODE = 'BTN01'.
+    LEAVE TO SCREEN 0.
+  ENDIF.
+ENDMODULE.
+```
+</br>
+</br>
+
+**5) 100 Screen `PBO` 모듈 수정**
+```abap
+MODULE status_0100 OUTPUT.
+
+  SET PF-STATUS 'S100'.
+
+  IF gv_title = 1.
+    SET TITLEBAR 'T100' WITH 'View'.
+  ELSEIF gv_title = 2.
+    SET TITLEBAR 'T100' WITH 'Maintain flights'.
+    LOOP AT SCREEN.
+      IF screen-name = 'SDYN_CONN-PLANETYPE'.
+        screen-input = 1.
+      ENDIF.
+      MODIFY SCREEN.
+    ENDLOOP.
+  ELSEIF gv_title = 3.
+    SET TITLEBAR 'T100' WITH 'Maintain bookings'.
+  ENDIF.
+
+  IF gv_button = 1.
+    IF gv_subrc <> 0.
+      CLEAR SDYN_CONN.
+      gv_subrc = 0.
+    ELSE.
+      MOVE-CORRESPONDING gs_data TO SDYN_CONN.
+    ENDIF.
+  ELSE.
+    gv_button = 0.
+  ENDIF.
+
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE status_0150 OUTPUT.
+ SET PF-STATUS 'S150'.
+ SET TITLEBAR 'xxx'.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE clear_ok_code OUTPUT.
+  CLEAR: OK_CODE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE set_subscreen OUTPUT.
+  CASE MY_TABSTRIP-activetab.
+    WHEN 'FC1'.
+      gv_tabdynnr = '0110'.
+    WHEN 'FC2'.
+      gv_tabdynnr = '0120'.
+    WHEN 'FC3'.
+      gv_tabdynnr = '0130'.
+    WHEN OTHERS.
+      gv_tabdynnr = '0110'.
+      MY_TABSTRIP-activetab = 'FC1'.
+  ENDCASE.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE status_0110 OUTPUT.
+  MOVE-CORRESPONDING gs_spfli TO SPFLI.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE status_0120 OUTPUT.
+  MOVE-CORRESPONDING gs_scarr TO SCARR.
+ENDMODULE.
+
+*&---------------------------------------------------------------------*
+
+MODULE status_0130 OUTPUT.
+  MOVE-CORRESPONDING gs_sbook TO SBOOK.
+ENDMODULE.
+```
