Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -831,3 +831,10 @@ MODULE status_0130 OUTPUT.
   MOVE-CORRESPONDING gs_sbook TO SBOOK.
 ENDMODULE.
 ```
+</br>
+</br>
+
+**6) 결과 확인**
+- 아래 서브스크린에도 데이터가 뜸
+
+<img width="538" height="341" alt="image" src="https://github.com/user-attachments/assets/2c183bbf-c0dc-49f1-b516-5a79827d846c" />
