Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -2,8 +2,8 @@
 </br>
 
 - **1) `CALL SUBSCREEN`**
-- **2)**
-- **3)**
+- **2) Tabstrip (Tab Page) - 로컬 스크롤링**
+- **3) Tabstrip (Tab Page) - PAI 스크롤링**
 
 </br>
 
