Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -676,6 +676,7 @@ DATA: gs_spfli TYPE spfli,
 </br>
 
 **4) 100 Screen `PAI` 모듈 수정**
+- CASE문에서는 `OR` 절만 가능
 ```abap
 MODULE user_command_0100 INPUT.
 
