Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -4,6 +4,8 @@
 - **1) `CALL SUBSCREEN`**
 - **2) Tabstrip (Tab Page) - 로컬 스크롤링**
 - **3) Tabstrip (Tab Page) - PAI 스크롤링**
+- **`ACTIVETAB`** 은 무조건 **`PBO`** 에서 해야 함
+- **`ACTIVETAB` 값 = 탭의 **`Function Code`**
 
 </br>
 
@@ -20,6 +22,8 @@
 - **즉시 반응** = **`Function Code`** 필수
 - **버튼** → **`Function Code`** 만 OK_CODE로 옴
 - **라디오·체크** → 보통 **`Name`** 값(X)으로 판단 ( `Function Code` 지정 필수 )
+- **`ACTIVETAB`** 은 무조건 **`PBO`** 에서 해야 함
+- **`ACTIVETAB` 값 = 탭의 **`Function Code`**
 
 </br>
 </br>
