--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -5,7 +5,7 @@
 - **2) Tabstrip (Tab Page) - 로컬 스크롤링**
 - **3) Tabstrip (Tab Page) - PAI 스크롤링**
 - **`ACTIVETAB`** 은 무조건 **`PBO`** 에서 해야 함
-- **`ACTIVETAB` 값 = 탭의 **`Function Code`**
+- **`ACTIVETAB`** 값 = 탭의 **`Function Code`**
 
 </br>
 
@@ -23,7 +23,7 @@
 - **버튼** → **`Function Code`** 만 OK_CODE로 옴
 - **라디오·체크** → 보통 **`Name`** 값(X)으로 판단 ( `Function Code` 지정 필수 )
 - **`ACTIVETAB`** 은 무조건 **`PBO`** 에서 해야 함
-- **`ACTIVETAB` 값 = 탭의 **`Function Code`**
+- **`ACTIVETAB`** 값 = 탭의 **`Function Code`**
 
 </br>
 </br>
