Update 프로그래밍 전용 웹 스크린 개발(12.18).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.18).md
@@ -189,14 +189,14 @@ ENDMODULE.
 
 ### < Tabstrip(Tab Page) 스크롤링 방식 >
 **1) 로컬 스크롤링**
-- Tab Page가 여러 개일 때 각 Tab Page마다 Subscreen Area를 따로 가짐
-- 탭별로 화면·데이터를 독립적으로 관리
-- 구현은 단순하지만 서브스크린이 여러 개 필요
+- Tab Page마다 Subscreen Area 각각 보유
+- 구조 단순, 탭별 화면·데이터 완전 분리
+- Function Type = `P`
   
 **2) PAI 스크롤링**
-- Tab Page가 여러 개여도 Subscreen Area는 1개만 사용
-- 탭 선택 시 PAI에서 표시할 서브스크린을 교체(재사용)
-- 구조는 복잡하지만 유지보수·재사용성 좋음
+- Tab Page 여러 개 + Subscreen Area 1개 재사용
+- 탭 선택 시 PAI에서 서브스크린 교체
+- Function Type = 공백(` `)
 </br>
 
 - `TOP` 모듈 (컨트롤 선언)
