--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -1,1 +1,32 @@
+## <  핵심 개념 >
+</br>
 
+- **1) `CALL SUBSCREEN`**
+- **2) Tabstrip (Tab Page) - 로컬 스크롤링**
+
+</br>
+
+- **`LEAVE TO SCREEN 0`** 같은 화면 전환 명령은 **`PAI`** 에서만
+- **`SCREEN-INPUT`** 같은 화면 속성 변경은 **`PBO`** 에서만
+- 사용자 입력 기반 SELECT는 **`PAI`** , 조회 결과 화면 반영/속성 변경은 **`PBO`**
+- **OK_CODE 초기화** 코드 꼭 넣어줘야 함 ( 보통 **`PBO`** 에서 )
+- **`OK_CODE`** 케이스문은 **`PAI`** 에서
+- LOOP AT SCREEN 사용시 **`MODIFY SCREEN`** 넣기
+- **`FIELD / CHAIN`** 은 무조건 **PAI** 에서만 구현
+- **`AT EXIT-COMMAND`** 은 무조건 **PAI** 에서만 구현
+- **`AT EXIT-COMMAND`** 는 Screen 코드에서 **맨 위** 에 두는 게 좋음
+- **서로 다른 스크린의 버튼** 은 같은 MODULE에서 처리하면 **안됨**
+- **즉시 반응** = **`Function Code`** 필수
+- **버튼** → **`Function Code`** 만 OK_CODE로 옴
+- **라디오·체크** → 보통 **`Name`** 값(X)으로 판단 ( `Function Code` 지정 필수 )
+- **`ACTIVETAB`** 은 무조건 **`PBO`** 에서 해야 함
+- **`ACTIVETAB`** 값 = 탭의 **`Function Code`**
+
+</br>
+</br>
+
+---
+
+</br>
+
+## < 서브스크린 (Subscreen) >
