--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -29,4 +29,7 @@
 
 </br>
 
-## < 서브스크린 (Subscreen) >
+## < Search Help (F4 도움말) >
+- F4 Help / Input Help / Value Help / Possible Entry 전부 같은 의미
+- 입력 필드 옆 버튼 클릭 시 유효한 값 목록 조회
+- 테이블/뷰 기반 + 조건(제한) 걸어서 조회 가능
