--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -33,3 +33,15 @@
 - F4 Help / Input Help / Value Help / Possible Entry 전부 같은 의미
 - 입력 필드 옆 버튼 클릭 시 유효한 값 목록 조회
 - 테이블/뷰 기반 + 조건(제한) 걸어서 조회 가능
+</br>
+</br>
+
+### Dialog Behavior
+- 조회 전에 조건 입력(Restriction) 다이얼로그 표시 가능
+- 조건 입력 → 조회 결과 목록(히트 리스트) 표시
+</br>
+</br>
+
+### Search Help 사용 방식
+- **Dictionary(테이블/구조 필드)**에 Search Help 연결 → 화면에서 자동 F4 제공 (권장)
+- Screen Painter에서 직접 연결도 가능하지만 비추천
