Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -42,7 +42,7 @@
 </br>
 </br>
 
-### Search Help 사용 방식
+### Search Help 연결
 - **Dictionary(테이블/구조 필드)** 에 Search Help 연결 → 화면에서 자동 F4 제공 (권장)
 - 연결 가능 위치
   
