Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -49,3 +49,6 @@
   - Data Element / Table 필드 / Structure 필드 / Check Table
   - Domain에는 F4(Search Help) 직접 연결 ❌
 - Screen Painter에서 직접 연결도 가능하지만 비추천
+</br>
+
+<img width="597" height="196" alt="image" src="https://github.com/user-attachments/assets/2d59e5d9-6cbb-4ac6-9026-fee832da0165" />
