--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -51,4 +51,11 @@
 - Screen Painter에서 직접 연결도 가능하지만 비추천
 </br>
 
+- Structure 안의 개별 필드에 Search Help 연결
 <img width="597" height="196" alt="image" src="https://github.com/user-attachments/assets/2d59e5d9-6cbb-4ac6-9026-fee832da0165" />
+</br>
+
+<img width="594" height="318" alt="image" src="https://github.com/user-attachments/assets/a1976759-8f11-4f58-b03f-5f7a8870530a" />
+
+</br>
+
