Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -58,3 +58,11 @@
 
 </br>
 
+- DB Table 안의 개별 필드에 Search Help 연결
+  
+<img width="562" height="322" alt="image" src="https://github.com/user-attachments/assets/4b7047c7-d893-4475-8cc4-953dba163f14" />
+</br>
+
+- Screen 에 Search Help 연결
+  
+<img width="364" height="328" alt="image" src="https://github.com/user-attachments/assets/798d500a-9a0f-4ca8-b2e8-100fd585897c" />
