--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -66,3 +66,32 @@
 - Screen 에 Search Help 연결
   
 <img width="364" height="328" alt="image" src="https://github.com/user-attachments/assets/798d500a-9a0f-4ca8-b2e8-100fd585897c" />
+</br>
+</br>
+</br>
+</br>
+
+### Input Help(F4) 적용 우선순위
+
+**1) Program(화면)**
+- 화면 필드 직접 지정 (최우선)
+
+**2) Dictionary – Table / Structure 필드**
+
+필드에 Search Help 연결
+
+3️⃣ Check Table(FK)
+
+Check Table → 텍스트 → 키값
+
+4️⃣ Data Element
+
+Data Element에 연결된 Search Help
+
+5️⃣ Domain
+
+Fixed Values 목록
+
+6️⃣ 날짜/시간
+
+Calendar / Clock 자동 제공
