--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -73,11 +73,11 @@
 
 ### Input Help(F4) 적용 우선순위
 
-**1) Program(화면)**
-- 화면 필드 직접 지정 (최우선)
+- **1) Program(화면)**
+  - 화면 필드 직접 지정 (최우선)
 
-**2) Dictionary – Table / Structure 필드**
-- 필드에 Search Help 연결
+- **2) Dictionary – Table / Structure 필드**
+  - 필드에 Search Help 연결
 
 **3) Check Table(FK)**
 - Check Table → 텍스트 → 키값
