Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -79,17 +79,17 @@
 - **2) Dictionary – Table / Structure 필드**
   - 필드에 Search Help 연결
 
-**3) Check Table(FK)**
-- Check Table → 텍스트 → 키값
+- **3) Check Table(FK)**
+  - Check Table → 텍스트 → 키값
 
-**4) Data Element**
-- Data Element에 연결된 Search Help
+- **4) Data Element**
+  - Data Element에 연결된 Search Help
 
-**5) Domain**
-- Fixed Values 목록
+- **5) Domain**
+  - Fixed Values 목록
 
-**6) 날짜/시간**
-- Calendar / Clock 자동 제공
+- **6) 날짜/시간**
+  - Calendar / Clock 자동 제공
 
 <img width="464" height="296" alt="image" src="https://github.com/user-attachments/assets/f88d9d3c-8fa0-4471-9044-e2f60e0a5e1b" />
 </br>
