Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -98,3 +98,10 @@
 </br>
 
 ### Search Help 생성 예제
+- **1) Search Help 생성**
+
+<img width="561" height="334" alt="image" src="https://github.com/user-attachments/assets/e60ebe07-b5ae-4706-b5e8-ac22b5d1e8b9" />
+</br>
+
+<img width="329" height="104" alt="image" src="https://github.com/user-attachments/assets/cccc53b0-5bed-4eea-94ec-20e24ed826c0" />
+
