--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -99,8 +99,12 @@
 
 ### Search Help 생성 예제
 - **1) Search Help 생성**
+  - `Selection Method`
+    - Table 또는 View 지정
+    - F4 조회 시 데이터를 가져오는 대상
 
-<img width="561" height="334" alt="image" src="https://github.com/user-attachments/assets/e60ebe07-b5ae-4706-b5e8-ac22b5d1e8b9" />
+<img width="577" height="344" alt="image" src="https://github.com/user-attachments/assets/1cf7d842-4c95-41c2-b602-7922949e575a" />
+
 </br>
 
 <img width="329" height="104" alt="image" src="https://github.com/user-attachments/assets/cccc53b0-5bed-4eea-94ec-20e24ed826c0" />
