Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -104,15 +104,14 @@
     
     - Table 또는 View 지정
     - F4 조회 시 데이터를 가져오는 대상
-  - `Dialog Type`
- 
-    - `System-dependent`
-      - 데이터 양에 따라 시스템이 자동 판단
-      - 바로 결과 or 조건 화면 중 선택
 
 <img width="577" height="344" alt="image" src="https://github.com/user-attachments/assets/1cf7d842-4c95-41c2-b602-7922949e575a" />
 
 </br>
 
+- `Dialog Type`
+  - 1) `System-dependent`
+       - 데이터 양에 따라 시스템이 자동 판단
+       - 바로 결과 or 조건 화면 중 선택
 <img width="329" height="104" alt="image" src="https://github.com/user-attachments/assets/cccc53b0-5bed-4eea-94ec-20e24ed826c0" />
 
