Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -111,7 +111,7 @@
 </br>
 
 - `Dialog Type`  
-  - 1. `System-dependent` : 데이터 양에 따라 시스템이 자동 판단. 바로 결과 or 조건 화면 중 선택.
+  - `System-dependent` : 데이터 양에 따라 시스템이 자동 판단. 바로 결과 or 조건 화면 중 선택.
 
 <img width="329" height="104" alt="image" src="https://github.com/user-attachments/assets/cccc53b0-5bed-4eea-94ec-20e24ed826c0" />
 
