Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -112,6 +112,8 @@
 
 - `Dialog Type`  
   - `System-dependent` : 데이터 양에 따라 시스템이 자동 판단. 바로 결과 or 조건 화면 중 선택.
+  - `Display values immediately` : 조건 없이 즉시 조회 결과 출력.
+  - `Display restriction dialog` : 조회 조건 입력 화면 먼저 출력
 
 <img width="329" height="104" alt="image" src="https://github.com/user-attachments/assets/cccc53b0-5bed-4eea-94ec-20e24ed826c0" />
 
