--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -104,17 +104,18 @@
     
     - Table 또는 View 지정
     - F4 조회 시 데이터를 가져오는 대상
+  - `Dialog Type`
+ 
+    - `System-dependent` : 데이터 양에 따라 시스템이 자동 판단. 바로 결과 or 조건 화면 중 선택.
+    - `Display values immediately` : 조건 없이 즉시 조회 결과 출력.
+    - `Display restriction dialog` : 조회 조건 입력 화면 먼저 출력
+
+<img width="329" height="104" alt="image" src="https://github.com/user-attachments/assets/cccc53b0-5bed-4eea-94ec-20e24ed826c0" />
+</br>
+</br>
 
 <img width="577" height="344" alt="image" src="https://github.com/user-attachments/assets/1cf7d842-4c95-41c2-b602-7922949e575a" />
 
 </br>
 </br>
-
-- Dialog Type
-  
-  - `System-dependent` : 데이터 양에 따라 시스템이 자동 판단. 바로 결과 or 조건 화면 중 선택.
-  - `Display values immediately` : 조건 없이 즉시 조회 결과 출력.
-  - `Display restriction dialog` : 조회 조건 입력 화면 먼저 출력
-
-<img width="329" height="104" alt="image" src="https://github.com/user-attachments/assets/cccc53b0-5bed-4eea-94ec-20e24ed826c0" />
 
