--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -108,7 +108,12 @@
  
     - `System-dependent` : 데이터 양에 따라 시스템이 자동 판단. 바로 결과 or 조건 화면 중 선택.
     - `Display values immediately` : 조건 없이 즉시 조회 결과 출력.
-    - `Display restriction dialog` : 조회 조건 입력 화면 먼저 출력
+    - `Display restriction dialog` : 조회 조건 입력 화면 먼저 출력.
+  - `Parameter` 설정
+
+    - Search Help에서 사용하는 필드 정의
+    - `LPOS (List Position)` → 결과 리스트에 표시되는 순서
+    - `SPOS (Selection Position)` → 조회조건(Restriction) 화면에 표시되는 순서
 
 <img width="329" height="104" alt="image" src="https://github.com/user-attachments/assets/cccc53b0-5bed-4eea-94ec-20e24ed826c0" />
 </br>
