Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -114,7 +114,6 @@
   - Search Help에서 사용하는 필드 정의
   - `LPOS (List Position)` → 결과 리스트에 표시되는 순서
   - `SPOS (Selection Position)` → 조회조건(Restriction) 화면에 표시되는 순서
-</br>
 
 <img width="329" height="104" alt="image" src="https://github.com/user-attachments/assets/cccc53b0-5bed-4eea-94ec-20e24ed826c0" />
 </br>
@@ -123,4 +122,17 @@
 
 </br>
 </br>
+</br>
+</br>
+
+**2) DB Table에 Search Help 설정**
+
+<img width="592" height="201" alt="image" src="https://github.com/user-attachments/assets/ea73a953-873d-47b1-a836-b49a1ff16ee3" />
+</br>
+
+<img width="410" height="98" alt="image" src="https://github.com/user-attachments/assets/0f15a1ea-c88b-4c70-9ce4-e14b830ee483" />
+</br>
+
+<img width="391" height="266" alt="image" src="https://github.com/user-attachments/assets/88907ec1-4d5c-4214-a709-281ee8b12ad0" />
+
 
