Update 프로그래밍 전용 웹 스크린 개발(12.19).md

--- a/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
+++ b/ABAP 심화/프로그래밍 전용 웹 스크린 개발(12.19).md
@@ -127,7 +127,8 @@
 </br>
 
 **2) DB Table에 Search Help 설정**
-
+- 원하는 필드 선택 후에 `Search Help` 버튼 클릭
+  
 <img width="592" height="201" alt="image" src="https://github.com/user-attachments/assets/ea73a953-873d-47b1-a836-b49a1ff16ee3" />
 </br>
 </br>
@@ -137,5 +138,9 @@
 </br>
 
 <img width="391" height="266" alt="image" src="https://github.com/user-attachments/assets/88907ec1-4d5c-4214-a709-281ee8b12ad0" />
+</br>
+</br>
 
+- 설정된 것을 확인
+<img width="593" height="191" alt="image" src="https://github.com/user-attachments/assets/af75078c-a3d8-41da-8317-fd39b3ee03a3" />
 
